@@ -307,12 +307,12 @@ void JackEngine::NotifyFreewheel(bool onoff)
 {
     if (onoff) {
         // Save RT state
-        fEngineControl->fFWRealTime = fEngineControl->fRealTime;
+        fEngineControl->fSavedRealTime = fEngineControl->fRealTime;
         fEngineControl->fRealTime = false;
     } else {
         // Restore RT state
-        fEngineControl->fRealTime = fEngineControl->fFWRealTime;
-        fEngineControl->fFWRealTime = false;
+        fEngineControl->fRealTime = fEngineControl->fSavedRealTime;
+        fEngineControl->fSavedRealTime = false;
     }
     NotifyClients((onoff ? kStartFreewheelCallback : kStopFreewheelCallback), true, "", 0, 0);
 }
